# data2bots_assessment

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: data_3.json
json_schema_sniffer/: __main__.py  exceptions.py  json_validator.py  main.py  protocols.py  schema_sniffer.py  storages.py
json_schema_sniffer/core/: exceptions.py
json_schema_sniffer/sniffers/: schema_sniffer.py
json_schema_sniffer/storages/: json_file_storage.py
json_schema_sniffer/tests/: conftest.py  schema_sniffer_test.py  tests.json
json_schema_sniffer/validators/: json_validator.py
tests/: schema_sniffer_test.py  test_schema_sniffer.py
