[tool.poetry]
name = "json-schema-sniffer"
version = "0.1.0"
description = "Sniffs or scrapes schema properties from a json file, stores the parsed schema in a new json file."
authors = ["Tega Ukavwe <justtega97@gmail.com>"]
readme = "README.md"
packages = [{include = "json_schema_sniffer"}]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^7.2.0"
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.4"
pre-commit = "^2.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v"
empty_parameter_set_mark = "xfail"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "logs/pytest-logs.txt"
python_files = "test_*.py *_test.py"

testpaths = [
    "tests",
    "integration",
]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["snapshots"]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false